<resources>
    <string name="app_name">21SOEIT13014</string>
    <string name="by">By</string>
    <string name="help">Help</string>
    <string name="code">Code</string>
    <string name="call">Call</string>
    <string name="name_app">Vivek Padia.</string>
    <string name="calculator">Calculator</string>
    <string name="Light">Light Mode</string>
    <string name="taskapp">Task App</string>
    <string name="Login">Login</string>
    <string name="tt4_splash">Tutorial 4</string>
    <string name="Dark">Dark Mode</string>
    <string name="Darkmodename">Theme\'s App</string>
    <string name="tt1_name">Tutorial 1</string>
    <string name="tt2_name">Tutorial 2</string>
    <string name="tt3_name">Tutorial 3</string>
    <string name="tt4_name">Tutorial 4</string>
    <string name="tt5_name">Tutorial 5</string>
    <string name="tt6_name">Tutorial 6</string>
    <string name="tt3_edit1_placeholder_name">Enter Username</string>
    <string name="tt3_edit2_placeholder_name">Enter Password</string>
    <string name="displaytext">Display Text</string>
    <string name="welcome">Welcome to Vivek\'s App : </string>
    <string name="tt1_text">Welcome to RK University</string>
    <string name="theme_app">Welcome to Theme\'s App : </string>
    <string name="user">User :</string>
    <string name="registration">Registration Form :</string>
    <string name="edit_hint">Enter Something :</string>
    <string name="enter_user">Enter User :</string>
    <string name="enter_username">Enter Username :</string>
    <string name="reg_enter_username">Enter Username</string>
    <string name="reg_enter_passw">Enter Password</string>
    <string name="gender">Gender</string>
    <string name="quali">Qualification</string>
    <string name="branch_reg">Branch</string>
    <string name="CE">CE</string>
    <string name="IT">IT</string>
    <string name="MEC">Mechanical</string>
    <string name="ELE">Electrical</string>
    <string name="civil">Civil</string>
    <string name="gender_male">Male</string>
    <string name="gender_reg">Male / Female</string>
    <string name="terms">By accepting this you agree to our T and C.</string>
    <string name="gender_female">Female</string>
    <string name="gender_other">Other</string>
    <string name="submit">Submit</string>
    <string name="create">Create</string>
    <string name="sign_up">Sign Up</string>
    <string name="signup">Sign Up</string>
    <string name="clear">AC</string>
    <string name="cancel">C</string>
    <string name="modulo">%</string>
    <string name="addition">+</string>
    <string name="divison">/</string>
    <string name="subtraction">-</string>
    <string name="multiplication">x</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="tt4_email">Email : </string>
    <string name="tt4_label_email">Try Email : admin@gmail.com</string>
    <string name="tt4_pass">Password : </string>
    <string name="tt4_label_pass">Try Password : admin</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="double_zero">00</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string-array name="quali_arr">
        <item>10th</item>
        <item>12th</item>
        <item>Bachelor</item>
        <item>Masters</item>
        <item>Phd</item>
    </string-array>

    <!-- tt5 Values -->
    <string-array name="tt5_city_array">
        <item>Ahemdabad</item>
        <item>Baroda</item>
        <item>Jamnagar</item>
        <item>Rajkot</item>
    </string-array>

    <string name="tt5_signUp">Sign Up</string>
    <string name="tt5_fname">First Name</string>
    <string name="tt5_lname">Last Name</string>
    <string name="tt5_email">Email</string>
    <string name="tt5_pass">Password</string>
    <string name="tt5_gender_label">Gender</string>
    <string name="tt5_gender_male">Male</string>
    <string name="tt5_gender_female">Female</string>
    <string name="tt5_branch_label">Branch</string>
    <string name="tt5_branch_desc">CE / IT</string>
    <string name="tt5_branch_ce">CE</string>
    <string name="tt5_branch_it">IT</string>
    <string name="tt5_city">City</string>
    <string name="tt5_status_label">Status</string>
    <string name="tt5_status_desc">Active / Inactive</string>

    <string name="title_activity_tutorial4">TutorialActivity4</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- tt6 Values -->
    <string name="tt6_login">Login</string>
    <string name="tt6_password">Password</string>
    <string name="tt6_email">Email</string>
    <string name="tt6_loGout">Logout</string>

</resources>
