<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".CalculatorScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/output"
            android:layout_width="match_parent"
            android:layout_height="80sp"
            android:gravity="bottom"
            android:maxLines="1"
            android:text=""
            android:textAlignment="viewEnd"
            android:paddingEnd="20sp"
            android:textColor="#050505"
            android:textSize="30sp"
            tools:ignore="RtlCompat,RtlSymmetry" />

        <TextView
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:maxLines="1"
            android:paddingEnd="20dp"
            android:text=""
            android:textAlignment="viewEnd"
            android:textColor="@color/black"
            android:textSize="45sp"
            app:layout_constraintBottom_toTopOf="@+id/cardView"
            tools:ignore="RtlSymmetry" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="480sp"
            android:background="@color/white"
            app:cardCornerRadius="4dp"
            app:cardElevation="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:background="@color/white"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:weightSum="5">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"
                            android:weightSum="4">

                            <Button
                                android:id="@+id/b_clear"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="3dp"
                                android:layout_weight="1"
                                android:background="@drawable/button"
                                android:text="@string/clear"
                                android:textColor="@color/black"
                                android:textSize="25sp" />

                            <Button
                                android:id="@+id/bbrac1"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="3dp"
                                android:layout_weight="1"
                                android:background="@drawable/button"
                                android:text="@string/modulo"
                                android:textColor="@color/black"
                                android:textSize="25sp" />

                            <Button
                                android:id="@+id/b_cancel"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="3dp"
                                android:layout_weight="1"
                                android:background="@drawable/button"
                                android:text="@string/cancel"
                                android:textColor="@color/black"
                                android:textSize="25sp" />

                            <Button
                                android:id="@+id/b_divide"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="3dp"
                                android:layout_weight="1"
                                android:background="@drawable/button"
                                android:text="@string/divison"
                                android:textColor="@color/black"
                                android:textSize="25sp" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"
                            android:weightSum="4">

                            <Button
                                android:id="@+id/b7"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="3dp"
                                android:layout_weight="1"
                                android:background="@drawable/circle_button"
                                android:text="@string/seven"
                                android:textColor="@color/white"
                                android:textSize="25sp" />

                            <Button
                                android:id="@+id/b8"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="3dp"
                                android:layout_weight="1"
                                android:background="@drawable/circle_button"
                                android:text="@string/eight"
                                android:textColor="@color/white"
                                android:textSize="25sp" />

                            <Button
                                android:id="@+id/b9"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="3dp"
                                android:layout_weight="1"
                                android:background="@drawable/circle_button"
                                android:text="@string/nine"
                                android:textColor="@color/white"
                                android:textSize="25sp" />

                            <Button
                                android:id="@+id/b_multi"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="3dp"
                                android:layout_weight="1"
                                android:background="@drawable/button"
                                android:text="@string/multiplication"
                                android:textAllCaps="false"
                                android:textColor="@color/black"
                                android:textSize="25sp" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"
                            android:weightSum="4">

                            <Button
                                android:id="@+id/b4"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="3dp"
                                android:layout_weight="1"
                                android:background="@drawable/circle_button"
                                android:padding="6dp"
                                android:text="@string/four"
                                android:textColor="@color/white"
                                android:textSize="25sp" />

                            <Button
                                android:id="@+id/b5"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="3dp"
                                android:layout_weight="1"
                                android:background="@drawable/circle_button"
                                android:padding="6dp"
                                android:text="@string/five"
                                android:textColor="@color/white"
                                android:textSize="25sp" />

                            <Button
                                android:id="@+id/b6"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="3dp"
                                android:layout_weight="1"
                                android:background="@drawable/circle_button"
                                android:padding="6dp"
                                android:text="@string/six"
                                android:textColor="@color/white"
                                android:textSize="25sp" />

                            <Button
                                android:id="@+id/b_sub"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="3dp"
                                android:layout_weight="1"
                                android:background="@drawable/button"
                                android:padding="6dp"
                                android:text="@string/subtraction"
                                android:textColor="@color/black"
                                android:textSize="25sp" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"
                            android:weightSum="4">

                            <Button
                                android:id="@+id/b1"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="3dp"
                                android:layout_weight="1"
                                android:background="@drawable/circle_button"
                                android:padding="6dp"
                                android:text="@string/one"
                                android:textColor="@color/white"
                                android:textSize="25sp" />

                            <Button
                                android:id="@+id/b2"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="3dp"
                                android:layout_weight="1"
                                android:background="@drawable/circle_button"
                                android:padding="6dp"
                                android:text="@string/two"
                                android:textColor="@color/white"
                                android:textSize="25sp" />

                            <Button
                                android:id="@+id/b3"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="3dp"
                                android:layout_weight="1"
                                android:background="@drawable/circle_button"
                                android:padding="6dp"
                                android:text="@string/three"
                                android:textColor="@color/white"
                                android:textSize="25sp" />

                            <Button
                                android:id="@+id/b_add"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="3dp"
                                android:layout_weight="1"
                                android:background="@drawable/button"
                                android:padding="6dp"
                                android:text="@string/addition"
                                android:textColor="@color/black"
                                android:textSize="25sp" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"
                            android:weightSum="4">

                            <Button
                                android:id="@+id/b00"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="3dp"
                                android:layout_weight="1"
                                android:background="@drawable/circle_button"
                                android:padding="6dp"
                                android:text="@string/double_zero"
                                android:textColor="@color/white"
                                android:textSize="25sp" />

                            <Button
                                android:id="@+id/b0"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="3dp"
                                android:layout_weight="1"
                                android:background="@drawable/circle_button"
                                android:padding="6dp"
                                android:text="0"
                                android:textColor="@color/white"
                                android:textSize="25sp" />

                            <Button
                                android:id="@+id/b_dot"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="3dp"
                                android:layout_weight="1"
                                android:background="@drawable/circle_button"
                                android:padding="6dp"
                                android:text="."
                                android:textColor="@color/white"
                                android:textSize="25sp" />

                            <Button
                                android:id="@+id/b_equal"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="3dp"
                                android:layout_weight="1"
                                android:background="@drawable/custom_equal"
                                android:padding="6dp"
                                android:text="@string/equal"
                                android:textColor="@color/white"
                                android:textSize="25sp" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>
