<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_theme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".DarkMode">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/theme_app"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv1">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/Call_Light"
            android:layout_width="125dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:backgroundTint="@color/main"
            android:fontFamily="@font/open_sans_bold"
            android:gravity="center"
            android:text="@string/Light"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:ignore="ButtonStyle" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/Call_Dark"
            android:layout_width="125dp"
            android:layout_height="60dp"
            android:layout_marginStart="10sp"
            android:layout_weight="1"
            android:backgroundTint="@color/main"
            android:fontFamily="@font/open_sans_bold"
            android:gravity="center"
            android:text="@string/Dark"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>